# 2048oyun

./: CMakeLists.txt  main.cpp  oyun.cpp  oyun.hpp  tahta.cpp  tahta.hpp
